--- a/public/index.html
+++ b/public/index.html
@@ -23,7 +23,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <link rel="icon" href="../src/assets/image/iconPage.png" type="image/png">
+    <link rel="icon" href="../src/assets/image/iconPage.png">
     <title>Calculadora da oficina</title>
   </head>
   <body>
